--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   shared_preferences: ^2.0.14
   go_router: ^3.1.0
   smooth_page_indicator: ^1.0.0+2
+  intl_phone_field: ^3.1.0
+  intl_phone_number_input: ^0.7.0+2
 
 dev_dependencies:
   flutter_test:
