--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   intl_phone_field: ^3.1.0
   intl_phone_number_input: ^0.7.0+2
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
